Toimii, pitää lisätä tulosteet kaikkiin actioneihin, ja lisätä päivitys pelaajan statseista jokaisen loopin alkuun

--- a/State/pom.xml
+++ b/State/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>Suunnittelumallit</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>Suunnittelumallit</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>FactoryModel</module>
-        <module>AbstractFactory</module>
-        <module>Composite</module>
-        <module>Observer</module>
-        <module>Singleton</module>
-        <module>Decorator</module>
-        <module>State</module>
-    </modules>
+    <artifactId>State</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -30,6 +23,5 @@
         <dependency> <groupId>org.openjfx</groupId> <artifactId>javafx-fxml</artifactId> <version>20.0.1</version> </dependency>
         <dependency> <groupId>org.openjfx</groupId> <artifactId>javafx-controls</artifactId> <version>20.0.1</version> </dependency>
     </dependencies>
-
 
 </project>
