Chain of Responsibility tehty

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>State</module>
         <module>Template</module>
         <module>Strategy</module>
+        <module>Chain</module>
     </modules>
 
     <properties>
