--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>Strategy</module>
         <module>Chain</module>
         <module>Memento</module>
+        <module>Proxy</module>
     </modules>
 
     <properties>
