--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>Chain</module>
         <module>Memento</module>
         <module>Proxy</module>
+        <module>Visitor</module>
     </modules>
 
     <properties>
