--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>Memento</module>
         <module>Proxy</module>
         <module>Visitor</module>
+        <module>Builder</module>
     </modules>
 
     <properties>
