--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>Proxy</module>
         <module>Visitor</module>
         <module>Builder</module>
+        <module>Adapter</module>
     </modules>
 
     <properties>
