--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>Flyweight</module>
         <module>Prototype</module>
         <module>Mediator</module>
+        <module>Iterator</module>
     </modules>
 
     <properties>
