--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>Prototype</module>
         <module>Mediator</module>
         <module>Iterator</module>
+        <module>Facade</module>
     </modules>
 
     <properties>
